Reworked news and events on the home page. Fixed some wrapping issues in the footer.

--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -44,6 +44,12 @@ h3 {
   text-transform: uppercase;
 }
 
+ul,
+ol,
+dl {
+  margin-bottom: 0.6rem;
+}
+
 @import "header";
 @import "footer";
 @import "front-page";
